--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,26 +7,26 @@ on:
   schedule:
   - cron: "*/2 * * * *"
 
-jobs: 
+jobs:
   build:
     runs-on: ubuntu-latest
-    steps: 
-      - uses: actions/checkout@v2
-      - name: Setup node
-      - uses: actions/setup-node@v1
-        with: 
-          node-version: '>=12.14.1'
-      - name: Install dependencies
-        run: npm ci
-      - name: Scrape data waifu
-        run: npm run start:scrape
-      - name: Commit change
-        run: |
-          git config --local user.email "satyawikananda456@gmail.com"
-          git config --local user.name "satyawikananda"
-          git add .
-          git commit -m "chore: Update scrape data waifu"
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup node
+      uses: actions/setup-node@v1
+      with:
+        node-version: '>=12.14.1'
+    - name: Install dependecies
+      run: npm ci
+    - name: Scrape data waifu
+      run: npm run start:scrape
+    - name: Commit files
+      run: |
+        git config --local user.email "satyawikananda456@gmail.com"
+        git config --local user.name "satyawikananda"
+        git add .
+        git commit -m "chore: Update data waifu" -a
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
