--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         node-version: '>=12.14.1'
     - name: Install dependecies
-      run: npm ci
+      run: npm install
     - name: Scrape data waifu
       run: npm run start:scrape
     - name: Commit files
