chore: Update CI

--- a/.github/workflows/scrape-data.yml
+++ b/.github/workflows/scrape-data.yml
@@ -26,5 +26,5 @@ jobs:
         git config user.email "actions@users.noreply.github.com"
         git add -A
         timestamp=$(date -u)
-        git commit -m "Latest data: ${timestamp}" || exit 0
+        git commit -m "chore(scrape): Update scrape data" || exit 0
         git push
